//
// Copyright 2024 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cas.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/chainloop-dev/chainloop/app/artifact-cas/api/cas/v1;v1";

service ResourceService {
  rpc Describe(ResourceServiceDescribeRequest) returns (ResourceServiceDescribeResponse);
}

message ResourceServiceDescribeRequest {
  string digest = 1 [(buf.validate.field).string.min_len = 1];
}

message ResourceServiceDescribeResponse {
  CASResource result = 1;
}

message CASResource {
  string file_name = 1;
  string digest = 2;
  // size in bytes
  int64 size = 3;
}
